--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <div class="control-btns">
         <button id="home-btn" class="home-btn btn">⌂</button>
          <!--onclick="location.www.mywebsite.com"-->
-         <h1> How Much Do You Know About Sharks?</h1>
+         <h1 class="heading"> How Much Do You Know About Sharks?</h1>
          <img class="home-image" src="./images/p02q7v6w.jpg"  alt="hammer head sharks">
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
